[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/SweetSquish.gd" type="Script" id=1]
[ext_resource path="res://assets/art/phone.png" type="Texture" id=2]
[ext_resource path="res://scripts/square1.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 52.286, 51.7646 )

[node name="SweetSquish" type="Node2D"]
script = ExtResource( 1 )

[node name="phone" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="squares" type="Node2D" parent="."]

[node name="row1" type="Node2D" parent="squares"]

[node name="square1" type="Area2D" parent="squares/row1"]
position = Vector2( 350, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row1/square1"]
shape = SubResource( 1 )

[node name="square2" type="Area2D" parent="squares/row1"]
position = Vector2( 500, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row1/square2"]
shape = SubResource( 2 )

[node name="square3" type="Area2D" parent="squares/row1"]
position = Vector2( 650, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row1/square3"]
shape = SubResource( 3 )

[node name="row2" type="Node2D" parent="squares"]
position = Vector2( 0, 200 )

[node name="square1" type="Area2D" parent="squares/row2"]
position = Vector2( 350, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row2/square1"]
shape = SubResource( 4 )

[node name="square2" type="Area2D" parent="squares/row2"]
position = Vector2( 500, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row2/square2"]
shape = SubResource( 5 )

[node name="square3" type="Area2D" parent="squares/row2"]
position = Vector2( 650, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row2/square3"]
shape = SubResource( 6 )

[node name="row3" type="Node2D" parent="squares"]
position = Vector2( 0, 400 )

[node name="square1" type="Area2D" parent="squares/row3"]
position = Vector2( 350, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row3/square1"]
shape = SubResource( 7 )

[node name="square2" type="Area2D" parent="squares/row3"]
position = Vector2( 500, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row3/square2"]
shape = SubResource( 8 )

[node name="square3" type="Area2D" parent="squares/row3"]
position = Vector2( 650, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row3/square3"]
shape = SubResource( 9 )

